scanparse2/statxt/parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl
   5        | decls sdecl

   6  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   7  formals_opt :
   8              | formal_list

   9  formal_list : special_type ID
  10              | formal_list COMMA special_type ID

  11  sdecl : STRUCT ID LBRACE vdecl_list RBRACE SEMI

  12  typ : INT
  13      | BOOL
  14      | FLOAT
  15      | VOID
  16      | STRING
  17      | CHAR

  18  special_type : typ
  19               | special_type LSQUARE INTLIT RSQUARE

  20  vdecl_list :
  21             | vdecl_list vdecl

  22  vdecl : special_type ID SEMI

  23  stmt_list :
  24            | stmt_list stmt

  25  stmt : expr SEMI
  26       | RETURN expr_opt SEMI
  27       | LBRACE stmt_list RBRACE
  28       | IF LPAREN expr RPAREN stmt
  29       | IF LPAREN expr RPAREN stmt ELSE stmt
  30       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  31       | WHILE LPAREN expr RPAREN stmt

  32  expr_opt :
  33           | expr

  34  array_list : expr
  35             | array_list COMMA expr

  36  expr : INTLIT
  37       | FLIT
  38       | BLIT
  39       | CHARLIT
  40       | STRLIT
  41       | ID
  42       | LBRACE array_list RBRACE
  43       | expr PLUS expr
  44       | expr MINUS expr
  45       | expr TIMES expr
  46       | expr DIVIDE expr
  47       | expr EQ expr
  48       | expr NEQ expr
  49       | expr LT expr
  50       | expr LEQ expr
  51       | expr GT expr
  52       | expr GEQ expr
  53       | expr AND expr
  54       | expr OR expr
  55       | MINUS expr
  56       | NOT expr
  57       | ID ASSIGN expr
  58       | ID LPAREN args_opt RPAREN
  59       | LPAREN expr RPAREN

  60  args_opt :
  61           | args_list

  62  args_list : expr
  63            | args_list COMMA expr

  64  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (64)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (64)

	.  reduce 64


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)
	decls : decls . sdecl  (5)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	CHAR  shift 10
	STRUCT  shift 11
	EOF  shift 12
	.  error

	vdecl  goto 13
	fdecl  goto 14
	sdecl  goto 15
	typ  goto 16
	special_type  goto 17


state 5
	typ : INT .  (12)

	.  reduce 12


state 6
	typ : BOOL .  (13)

	.  reduce 13


state 7
	typ : FLOAT .  (14)

	.  reduce 14


state 8
	typ : VOID .  (15)

	.  reduce 15


state 9
	typ : STRING .  (16)

	.  reduce 16


state 10
	typ : CHAR .  (17)

	.  reduce 17


state 11
	sdecl : STRUCT . ID LBRACE vdecl_list RBRACE SEMI  (11)

	ID  shift 18
	.  error


state 12
	program : decls EOF .  (1)

	.  reduce 1


state 13
	decls : decls vdecl .  (3)

	.  reduce 3


state 14
	decls : decls fdecl .  (4)

	.  reduce 4


state 15
	decls : decls sdecl .  (5)

	.  reduce 5


16: shift/reduce conflict (shift 19, reduce 18) on ID
state 16
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	special_type : typ .  (18)

	ID  shift 19
	LSQUARE  reduce 18


state 17
	special_type : special_type . LSQUARE INTLIT RSQUARE  (19)
	vdecl : special_type . ID SEMI  (22)

	LSQUARE  shift 20
	ID  shift 21
	.  error


state 18
	sdecl : STRUCT ID . LBRACE vdecl_list RBRACE SEMI  (11)

	LBRACE  shift 22
	.  error


state 19
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)

	LPAREN  shift 23
	.  error


state 20
	special_type : special_type LSQUARE . INTLIT RSQUARE  (19)

	INTLIT  shift 24
	.  error


state 21
	vdecl : special_type ID . SEMI  (22)

	SEMI  shift 25
	.  error


state 22
	sdecl : STRUCT ID LBRACE . vdecl_list RBRACE SEMI  (11)
	vdecl_list : .  (20)

	.  reduce 20

	vdecl_list  goto 26


state 23
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	formals_opt : .  (7)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	CHAR  shift 10
	RPAREN  reduce 7

	typ  goto 27
	formals_opt  goto 28
	formal_list  goto 29
	special_type  goto 30


state 24
	special_type : special_type LSQUARE INTLIT . RSQUARE  (19)

	RSQUARE  shift 31
	.  error


state 25
	vdecl : special_type ID SEMI .  (22)

	.  reduce 22


state 26
	sdecl : STRUCT ID LBRACE vdecl_list . RBRACE SEMI  (11)
	vdecl_list : vdecl_list . vdecl  (21)

	RBRACE  shift 32
	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	CHAR  shift 10
	.  error

	vdecl  goto 33
	typ  goto 27
	special_type  goto 17


state 27
	special_type : typ .  (18)

	.  reduce 18


state 28
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)

	RPAREN  shift 34
	.  error


state 29
	formals_opt : formal_list .  (8)
	formal_list : formal_list . COMMA special_type ID  (10)

	COMMA  shift 35
	RPAREN  reduce 8


state 30
	formal_list : special_type . ID  (9)
	special_type : special_type . LSQUARE INTLIT RSQUARE  (19)

	LSQUARE  shift 20
	ID  shift 36
	.  error


state 31
	special_type : special_type LSQUARE INTLIT RSQUARE .  (19)

	.  reduce 19


state 32
	sdecl : STRUCT ID LBRACE vdecl_list RBRACE . SEMI  (11)

	SEMI  shift 37
	.  error


state 33
	vdecl_list : vdecl_list vdecl .  (21)

	.  reduce 21


state 34
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (6)

	LBRACE  shift 38
	.  error


state 35
	formal_list : formal_list COMMA . special_type ID  (10)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	CHAR  shift 10
	.  error

	typ  goto 27
	special_type  goto 39


state 36
	formal_list : special_type ID .  (9)

	.  reduce 9


state 37
	sdecl : STRUCT ID LBRACE vdecl_list RBRACE SEMI .  (11)

	.  reduce 11


state 38
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (6)
	vdecl_list : .  (20)

	.  reduce 20

	vdecl_list  goto 40


state 39
	formal_list : formal_list COMMA special_type . ID  (10)
	special_type : special_type . LSQUARE INTLIT RSQUARE  (19)

	LSQUARE  shift 20
	ID  shift 41
	.  error


state 40
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (6)
	vdecl_list : vdecl_list . vdecl  (21)
	stmt_list : .  (23)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	VOID  shift 8
	STRING  shift 9
	CHAR  shift 10
	LPAREN  reduce 23
	LBRACE  reduce 23
	RBRACE  reduce 23
	MINUS  reduce 23
	NOT  reduce 23
	RETURN  reduce 23
	IF  reduce 23
	FOR  reduce 23
	WHILE  reduce 23
	CHARLIT  reduce 23
	STRLIT  reduce 23
	INTLIT  reduce 23
	BLIT  reduce 23
	ID  reduce 23
	FLIT  reduce 23

	vdecl  goto 33
	typ  goto 27
	stmt_list  goto 42
	special_type  goto 17


state 41
	formal_list : formal_list COMMA special_type ID .  (10)

	.  reduce 10


state 42
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (6)
	stmt_list : stmt_list . stmt  (24)

	LPAREN  shift 43
	LBRACE  shift 44
	RBRACE  shift 45
	MINUS  shift 46
	NOT  shift 47
	RETURN  shift 48
	IF  shift 49
	FOR  shift 50
	WHILE  shift 51
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	stmt  goto 58
	expr  goto 59


state 43
	expr : LPAREN . expr RPAREN  (59)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 61


44: shift/reduce conflict (shift 43, reduce 23) on LPAREN
44: shift/reduce conflict (shift 60, reduce 23) on LBRACE
44: shift/reduce conflict (shift 46, reduce 23) on MINUS
44: shift/reduce conflict (shift 47, reduce 23) on NOT
44: shift/reduce conflict (shift 52, reduce 23) on CHARLIT
44: shift/reduce conflict (shift 53, reduce 23) on STRLIT
44: shift/reduce conflict (shift 54, reduce 23) on INTLIT
44: shift/reduce conflict (shift 55, reduce 23) on BLIT
44: shift/reduce conflict (shift 56, reduce 23) on ID
44: shift/reduce conflict (shift 57, reduce 23) on FLIT
state 44
	stmt : LBRACE . stmt_list RBRACE  (27)
	expr : LBRACE . array_list RBRACE  (42)
	stmt_list : .  (23)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	RBRACE  reduce 23
	RETURN  reduce 23
	IF  reduce 23
	FOR  reduce 23
	WHILE  reduce 23

	stmt_list  goto 62
	expr  goto 63
	array_list  goto 64


state 45
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (6)

	.  reduce 6


state 46
	expr : MINUS . expr  (55)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 65


state 47
	expr : NOT . expr  (56)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 66


state 48
	stmt : RETURN . expr_opt SEMI  (26)
	expr_opt : .  (32)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	SEMI  reduce 32

	expr  goto 67
	expr_opt  goto 68


state 49
	stmt : IF . LPAREN expr RPAREN stmt  (28)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (29)

	LPAREN  shift 69
	.  error


state 50
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (30)

	LPAREN  shift 70
	.  error


state 51
	stmt : WHILE . LPAREN expr RPAREN stmt  (31)

	LPAREN  shift 71
	.  error


state 52
	expr : CHARLIT .  (39)

	.  reduce 39


state 53
	expr : STRLIT .  (40)

	.  reduce 40


state 54
	expr : INTLIT .  (36)

	.  reduce 36


state 55
	expr : BLIT .  (38)

	.  reduce 38


state 56
	expr : ID .  (41)
	expr : ID . ASSIGN expr  (57)
	expr : ID . LPAREN args_opt RPAREN  (58)

	LPAREN  shift 72
	ASSIGN  shift 73
	SEMI  reduce 41
	RPAREN  reduce 41
	RBRACE  reduce 41
	COMMA  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	TIMES  reduce 41
	DIVIDE  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LT  reduce 41
	LEQ  reduce 41
	GT  reduce 41
	GEQ  reduce 41
	AND  reduce 41
	OR  reduce 41


state 57
	expr : FLIT .  (37)

	.  reduce 37


state 58
	stmt_list : stmt_list stmt .  (24)

	.  reduce 24


state 59
	stmt : expr . SEMI  (25)
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	SEMI  shift 74
	PLUS  shift 75
	MINUS  shift 76
	TIMES  shift 77
	DIVIDE  shift 78
	EQ  shift 79
	NEQ  shift 80
	LT  shift 81
	LEQ  shift 82
	GT  shift 83
	GEQ  shift 84
	AND  shift 85
	OR  shift 86
	.  error


state 60
	expr : LBRACE . array_list RBRACE  (42)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 63
	array_list  goto 64


state 61
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : LPAREN expr . RPAREN  (59)

	RPAREN  shift 87
	PLUS  shift 75
	MINUS  shift 76
	TIMES  shift 77
	DIVIDE  shift 78
	EQ  shift 79
	NEQ  shift 80
	LT  shift 81
	LEQ  shift 82
	GT  shift 83
	GEQ  shift 84
	AND  shift 85
	OR  shift 86
	.  error


state 62
	stmt_list : stmt_list . stmt  (24)
	stmt : LBRACE stmt_list . RBRACE  (27)

	LPAREN  shift 43
	LBRACE  shift 44
	RBRACE  shift 88
	MINUS  shift 46
	NOT  shift 47
	RETURN  shift 48
	IF  shift 49
	FOR  shift 50
	WHILE  shift 51
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	stmt  goto 58
	expr  goto 59


state 63
	array_list : expr .  (34)
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	PLUS  shift 75
	MINUS  shift 76
	TIMES  shift 77
	DIVIDE  shift 78
	EQ  shift 79
	NEQ  shift 80
	LT  shift 81
	LEQ  shift 82
	GT  shift 83
	GEQ  shift 84
	AND  shift 85
	OR  shift 86
	RBRACE  reduce 34
	COMMA  reduce 34


state 64
	array_list : array_list . COMMA expr  (35)
	expr : LBRACE array_list . RBRACE  (42)

	RBRACE  shift 89
	COMMA  shift 90
	.  error


state 65
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : MINUS expr .  (55)

	.  reduce 55


state 66
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : NOT expr .  (56)

	.  reduce 56


state 67
	expr_opt : expr .  (33)
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	PLUS  shift 75
	MINUS  shift 76
	TIMES  shift 77
	DIVIDE  shift 78
	EQ  shift 79
	NEQ  shift 80
	LT  shift 81
	LEQ  shift 82
	GT  shift 83
	GEQ  shift 84
	AND  shift 85
	OR  shift 86
	SEMI  reduce 33
	RPAREN  reduce 33


state 68
	stmt : RETURN expr_opt . SEMI  (26)

	SEMI  shift 91
	.  error


state 69
	stmt : IF LPAREN . expr RPAREN stmt  (28)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (29)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 92


state 70
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (30)
	expr_opt : .  (32)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	SEMI  reduce 32

	expr  goto 67
	expr_opt  goto 93


state 71
	stmt : WHILE LPAREN . expr RPAREN stmt  (31)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 94


state 72
	expr : ID LPAREN . args_opt RPAREN  (58)
	args_opt : .  (60)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	RPAREN  reduce 60

	expr  goto 95
	args_opt  goto 96
	args_list  goto 97


state 73
	expr : ID ASSIGN . expr  (57)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 98


state 74
	stmt : expr SEMI .  (25)

	.  reduce 25


state 75
	expr : expr PLUS . expr  (43)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 99


state 76
	expr : expr MINUS . expr  (44)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 100


state 77
	expr : expr TIMES . expr  (45)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 101


state 78
	expr : expr DIVIDE . expr  (46)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 102


state 79
	expr : expr EQ . expr  (47)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 103


state 80
	expr : expr NEQ . expr  (48)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 104


state 81
	expr : expr LT . expr  (49)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 105


state 82
	expr : expr LEQ . expr  (50)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 106


state 83
	expr : expr GT . expr  (51)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 107


state 84
	expr : expr GEQ . expr  (52)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 108


state 85
	expr : expr AND . expr  (53)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 109


state 86
	expr : expr OR . expr  (54)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 110


state 87
	expr : LPAREN expr RPAREN .  (59)

	.  reduce 59


state 88
	stmt : LBRACE stmt_list RBRACE .  (27)

	.  reduce 27


state 89
	expr : LBRACE array_list RBRACE .  (42)

	.  reduce 42


state 90
	array_list : array_list COMMA . expr  (35)

	LPAREN  shift 43
	LBRACE  shift 60
	MINUS  shift 46
	NOT  shift 47
	CHARLIT  shift 52
	STRLIT  shift 53
	INTLIT  shift 54
	BLIT  shift 55
	ID  shift 56
	FLIT  shift 57
	.  error

	expr  goto 111


state 91
	stmt : RETURN expr_opt SEMI .  (26)

	.  reduce 26


state 92
	stmt : IF LPAREN expr . RPAREN stmt  (28)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (29)
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	RPAREN  shift 112
	PLUS  shift 75
	MINUS  shift 76
	TIMES  shift 77
	DIVIDE  shift 78
	EQ  shift 79
	NEQ  shift 80
	LT  shift 81
	LEQ  shift 82
	GT  shift 83
	GEQ  shift 84
	AND  shift 85
	OR  shift 86
	.  error


state 93
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (30)

	SEMI  shift 113
	.  error

